destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: s3
  namespace: s3
spec:
  host: s3worker.s3.svc.cluster.local
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
