virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s3
  namespace: s3
spec:
  hosts:
    - s3worker.s3.svc.cluster.local
  http:
    - route:
        - destination:
            host: s3worker.s3.svc.cluster.local
            subset: blue
          weight: 100
        - destination:
            host: s3worker.s3.svc.cluster.local
            subset: green
          weight: 0
